Travail sur la page mon espace perso + block de la librairie ICE dans le web xml ( ça nous faisait bug le JS)

--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Nav.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Nav.xhtml
@@ -82,7 +82,14 @@
                                     </ul>
                                 </li>
                                 <li><a href="#contact" id="menu">Contact</a></li>
-                                <li><a href="#contact" id="menu">Login</a></li>
+
+                                <li><h:form> 
+                                     <h:commandLink action="rejoindreUnEvenement" value="Les evenements" styleClass="lienAchat" >
+
+                                    </h:commandLink>
+                                     </h:form>  </li>
+                                     
+
                             </ul>                     
                         </div><!--/.nav-collapse -->
                     </div>
