Travail sur la page mon espace perso + block de la librairie ICE dans le web xml ( ça nous faisait bug le JS)

--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Nav.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Nav.xhtml
@@ -30,7 +30,7 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="menu">Achat <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
                                         <h:form>
-                                            <h:commandLink action="achat" value="Acheter" styleClass="lienAchat" >
+                                            <h:commandLink action="pageAchat" value="Acheter" styleClass="lienAchat" >
 
                                             </h:commandLink><br></br>
 
@@ -83,8 +83,8 @@
                                 </li>
                                 <li><a href="#contact" id="menu">Contact</a></li>
 
-                                <li><h:form> 
-                                     <h:commandLink action="rejoindreUnEvenement" value="Les evenements" styleClass="lienAchat" >
+                                <li class="menuLogin"><h:form> 
+                                     <h:commandLink action="monEspacePerso" value="Espace Perso" styleClass="menuLogin" >
 
                                     </h:commandLink>
                                      </h:form>  </li>
