Sebi : Creation d'un CSS Eco-bio style, creation des pages dans espace perso : mes infos et mes commandes. Maj du header pour intégrer le css, Maj du footer pour intégrer le JS taboulus, MAJ du face config pour les chemins de navigation. Creation des pagesn partciper evenement creer evenement, achat par ecnhere et page vente.

--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Footer.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Footer.xhtml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"   
       xmlns:ui="http://java.sun.com/jsf/facelets"
       >
     <body>
-	    <ui:composition>
- 
-		   <!-- footerBottomSection -->	
+        <ui:composition>
+
+            <!-- footerBottomSection -->	
             <div class="footerBottomSection">
                 <div class="container">
                     &copy; 2014, Allright reserved. <a href="#">Terms and Condition</a> | <a href="#">Privacy Policy</a> 
@@ -29,6 +29,11 @@
             <!-- JS Page Level -->           
             <script type="text/javascript" src="../assets/custom/js/app.js"></script>
             <script type="text/javascript" src="../assets/custom/js/index.js"></script>
+            <!-- JS onglet -->
+
+            <script type="text/javascript" src="../assets/custom/js/tabulous.js"></script>
+            <script type="text/javascript" src="../assets/custom/js/tabulous.min.js"></script>
+
 
 
             <script type="text/javascript">
@@ -37,9 +42,15 @@
                     App.initSliders();
                     Index.initParallaxSlider();
                 });
+
+                $(document).ready(function($) {
+
+                    $('#tabs').tabulous();
+
+                });
             </script>
 
- 
-	    </ui:composition>
+
+        </ui:composition>
     </body>
 </html>
