--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Header.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/Header.xhtml
@@ -14,7 +14,10 @@
                 <title>Bootstrap business-plate template </title>
 
                 <!-- Bootstrap core CSS -->
-                <link href="./../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"></link>   
+                <link href="./../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"></link> 
+                
+                <!-- Eco-bio CSS -->             
+                 <link href="./../assets/bootstrap/css/ecobio-style.css" rel="stylesheet"></link>   
 
                 <!-- CSS Implementing Plugins -->
                 <link rel="stylesheet" href="./../assets/custom/css/flexslider.css" type="text/css" media="screen"> </link>   	
