--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/pageEnchere.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/pageEnchere.xhtml
@@ -1,12 +1,37 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
+
+
     <h:body>
-        Hello from Facelets
+
+        <ui:composition template="/xhtml/Layout.xhtml">
+            <ui:define name="content">
+
+                <div class="serviceBlock">
+                    <div class="container">
+                        <h3>Les dernieres ventes par enchere</h3>
+                        <div class="row">
+                            <ui:repeat var="a" value="" varStatus="status">
+                                <div class="col-md-4">
+                                    <div class="clearfix">
+                                        <i class="fa fa-compress"></i>
+                                        <div class="desc">
+                                            <h4 id="titreMetier">Titre</h4>
+                                            <p>descriptif </p>
+                                        </div>
+                                    </div>
+                                </div> 
+                            </ui:repeat>
+                        </div>
+                    </div>
+                </div> 
+
+            </ui:define>
+        </ui:composition>
     </h:body>
 </html>
-
