--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/HeaderForIndex.xhtml
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/xhtml/HeaderForIndex.xhtml
@@ -15,6 +15,9 @@
 
                 <!-- Bootstrap core CSS -->
                 <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"></link>   
+                
+                <!-- Eco-bio CSS -->             
+                 <link href="assets/bootstrap/css/ecobio-style.css" rel="stylesheet"></link> 
 
                 <!-- CSS Implementing Plugins -->
                 <link rel="stylesheet" href="assets/custom/css/flexslider.css" type="text/css" media="screen"> </link>   	
